Fix horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,9 +80,13 @@ nav a {
   }
 
   .consulta-form {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     max-width: 600px;
+  }
+
+  .form-group:nth-child(5) {
+    grid-column: 1/span 2;
   }
 
   .grid-responsive {
@@ -114,7 +118,7 @@ nav a {
     display: flex;
   }
 
-  .fondoMasOscuro {
+  .offer1fondoOscuro, offer2fondoOscuro, offer3fondoOscuro {
     height: 65vh;
   }
 
@@ -161,13 +165,19 @@ nav a {
     font-size: 1rem;
   }
 }
+.form-group textarea, .form-group input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
 .consulta-form {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 5px;
-  max-width: 90%;
+  grid-template-columns: 1fr;
+  width: 100%;
 }
 
 .fix-height {
@@ -183,7 +193,7 @@ nav a {
   font-weight: bold;
 }
 .form-group:nth-child(5) {
-  grid-column: 1/span 2;
+  grid-column: 1/span 1;
 }
 
 textarea {
@@ -317,9 +327,13 @@ textarea {
   }
 
   .consulta-form {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     max-width: 600px;
+  }
+
+  .form-group:nth-child(5) {
+    grid-column: 1/span 2;
   }
 
   .grid-responsive {
@@ -351,7 +365,7 @@ textarea {
     display: flex;
   }
 
-  .fondoMasOscuro {
+  .offer1fondoOscuro, offer2fondoOscuro, offer3fondoOscuro {
     height: 65vh;
   }
 
@@ -404,10 +418,13 @@ textarea {
   align-items: center;
 }
 
-.fondoMasOscuro {
+.offer3fondoOscuro, .offer2fondoOscuro, .offer1fondoOscuro {
   position: absolute;
   width: 100%;
-  height: 80vh;
+}
+
+.offer1fondoOscuro {
+  height: 75vh;
   background-color: rgba(75, 75, 75, 0.87);
 }
 
@@ -416,7 +433,12 @@ textarea {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 42%;
-  height: 80vh;
+  height: 75vh;
+}
+
+.offer2fondoOscuro {
+  height: 90vh;
+  background-color: rgba(75, 75, 75, 0.87);
 }
 
 .offer2Servicios {
@@ -424,7 +446,12 @@ textarea {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0%;
-  height: 80vh;
+  height: 90vh;
+}
+
+.offer3fondoOscuro {
+  height: 90vh;
+  background-color: rgba(75, 75, 75, 0.87);
 }
 
 .offer3Servicios {
@@ -432,7 +459,7 @@ textarea {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 42%;
-  height: 80vh;
+  height: 90vh;
 }
 
 .contenedorUbicacion {
